# FinWizard

./: .gitignore
.github/workflows/: windows-build.yml
FinWizard Engine/: CMakeLists.txt  base_conf.json  executor_abi.h
FinWizard Engine/.qtcreator/: CMakeLists.txt.user.56c202e
FinWizard Engine/core/: Context.cpp  Context.h  Engine.cpp  Engine.h  Parser.cpp  Parser.h  PluginManager.cpp  PluginManager.h  Task.h  Value.cpp  Value.h
FinWizard Engine/core/.qtcreator/: project.json.user.56c202e
FinWizard v1.0/: CMakeLists.txt  CMakeLists.txt.user.212dd61  mainwindow.cpp  utils.cpp  utils.h
FinWizard v1.0/algorithms/: marjino_kolomenkaya.cpp
FinWizard v2.0/: CMakeLists.txt  mainwindow.ui  utils.cpp
FinWizard v2.0/algorithms/birulyovo_svodni/: biruovo.cpp  biruovo_svodni.py
FinWizard v2.0/algorithms/marjino_kolomenskaya_svodni/: marjino_kolomenkaya.cpp  marjino_kolomenskaya_svodni.py
FinWizard v3.0/: CMakeLists.txt.user.212dd61  PythonBot.py  algorithmregistry.h  bot.py  mainwindow.cpp  mainwindow.h  utils.h
FinWizard v4.0/: CMakeLists.txt  CMakeLists.txt.user.22f11f0  CMakeLists.txt.user.945b7b0  Raz_ZP_qt  logger.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
FinWizard v4.0/.qtcreator/: CMakeLists.txt.user.33a1079
FinWizard v4.0/algorithms/birulyovo_svodni/: biruovo.cpp  biruovo_svodni.py
FinWizard v5.0/: CMakeLists.txt  CMakeLists.txt.user.0390a03  CMakeLists.txt.user.212dd61  CMakeLists.txt.user.45df27e  CMakeLists.txt.user.503b8c5  CMakeLists.txt.user.54afd4b  CMakeLists.txt.user.693b9c1  CMakeLists.txt.user.ce603e8  CMakeLists.txt.user.e512599  CMakeLists.txt.user.f4311f1  list_algorithms.cpp  list_algorithms.h  list_done_files.cpp  list_done_files.h  list_files.cpp  list_files.h  utils.cpp
FinWizard v5.0/.qtcreator/: CMakeLists.txt.user.e2c036c
FinWizard v5.0/algorithms/birulyovo_svodni/: biruovo.cpp
FinWizard v5.0/algorithms/marjino_kolomenskaya_svodni/: marjino_kolomenkaya.cpp
FinWizard v6.0/: CMakeLists.txt.user.33a1079  CMakeLists.txt.user.a40b7af  CMakeLists.txt.user.d58ea1d  CMakeLists.txt.user.e2c036c  algorithmregistry.cpp  list_done_files.cpp  logger.cpp  resources.qrc
FinWizard v6.0/algorithms/birulyovo_svodni/: biruovo.cpp
FinWizard v6.0/algorithms/marjino_kolomenskaya_svodni/: marjino_kolomenskaya_svodni.py
FinWizard v7.0/: CMakeLists.txt.user.22e3e82  CMakeLists.txt.user.454d693  CMakeLists.txt.user.4a5b48c  CMakeLists.txt.user.638bcd0  CMakeLists.txt.user.79eade7  CMakeLists.txt.user.937ee38  CMakeLists.txt.user.945b7b0  CMakeLists.txt.user.a4440a1  CMakeLists.txt.user.c291dec  CMakeLists.txt.user.fb17990  list_algorithms.cpp  list_done_files.h  list_files.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
FinWizard v7.0/algorithms/birulyovo_svodni/: biruovo_svodni.py
FinWizard v7.0/algorithms/marjino_kolomenskaya_svodni/: marjino_kolomenkaya.cpp
FinWizard v7.0/qt5-5.15/: .tag
FinWizard_dll/: CMakeLists.txt
FinWizard_dll/installer/inno/: setup.iss
FinWizard_dll/src/core/include/finwizard/: iconfig.h  pluginengine.h  pluginmanager.h  pluginrepository.h
FinWizard_dll/src/core/src/: pluginengine.cpp  pluginmanager.cpp  pluginrepository.cpp
FinWizard_dll/src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
